--- a/Contact_Details.html
+++ b/Contact_Details.html
@@ -46,7 +46,7 @@
 
     <center>
         <img src="thanks.jpg" alt="" >
-    <a href="project.html"><h1>>>>>>>>THANK YOU FOR VISITING<<<<<<<<</h1></a>
+    <a href="index.html"><h1>>>>>>>>THANK YOU FOR VISITING<<<<<<<<</h1></a>
     </center>
 
     
